--- a/app/build.gradle
+++ b/app/build.gradle
@@ -13,6 +13,7 @@ android {
         versionName '3.1.4'
 
         testInstrumentationRunner "android.support.test.runner.AndroidJUnitRunner"
+        testInstrumentationRunner "ru.tinkoff.allure.android.AllureAndroidRunner"
     }
 
     buildTypes {
@@ -51,6 +52,9 @@ dependencies {
     androidTestCompile 'com.android.support:support-annotations:25.4.0'
     androidTestCompile group: 'com.google.code.gson', name: 'gson', version: '2.8.5'
     androidTestCompile "com.android.support.test.uiautomator:uiautomator-v18:2.1.3"
+    androidTestCompile "ru.tinkoff.allure:allure-android:2.5.1@aar"
+    androidTestCompile "ru.tinkoff.allure:allure-common:2.5.1"
+    androidTestCompile "ru.tinkoff.allure:allure-model:2.5.1"
 
 }
 repositories {
